--- a/index.html
+++ b/index.html
@@ -4,48 +4,68 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp,container-queries"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
   <title>Fitness & Weather</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-    }
-    #weather-info, #workout-info, #products-list, #airpollen-info {
-      margin: 20px 0;
-      font-size: 18px;
-    }
-    #products-list li {
-      margin-bottom: 10px;
-    }
-    #weather-img {
-      width: 100px;
-      height: 100px;
+  <style type="text/tailwindcss">
+    @layer utilities {
+      .content-auto {
+        content-visibility: auto;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>Fitness, Weather, and Product Recommendations</h1>
 
-  <div>
-    <h2>Weather Information</h2>
-    <p>Get the current weather and fitness suggestions for your location.</p>
-    <div>
-      <input type="text" id="location-input" placeholder="Enter your city" />
-      <button onclick="initialize()">Get Weather</button>
-      <button id="show-toast" onclick="notif.success('Hello from Solid Toast!')">
-        click me
-      </button>
+  <main>
+    <div class="place-items-center">
+
+      <div class="content-weather-info relative flex items-center justify-evenly">
+        <div class="items-center content-center place-items-center">
+          <img id="weather-img" style="width: 200px; height: auto;" />
+          <div id="weather-status" class="text-center"></div>
+        </div>
+  
+        <div>
+          <h3 id="city"></h3>
+          <h3 id="weather-info" class="font-semibold"></h3>
+          <div id="airpollen-info"></div>
+        </div>
+      </div>
+  
+  
+      <h2 class="">Weather Information</h2>
+      <p>Get the current weather and fitness suggestions for your location.</p>
+      <div>
+        <input type="text" class="rounded-full block mb-2" id="location-input" placeholder="Enter your city" />
+        <button id="submit-location" class="rounded-full">Get Weather</button>
+        <button id="show-toast" onclick="notif.success('Hello from Solid Toast!')">
+          click me
+        </button>
+      </div>
     </div>
-  </div>
 
-  <div id="weather-info"></div>
-  <div id="airpollen-info"></div>
-  <img id="weather-img" alt="Weather icon" style="width: 10%; height: auto;" />
-  <div id="workout-info"></div>
-  <ul id="products-list"></ul>
+    <div id="workout-info"></div>
+    <ul id="products-list"></ul>
+  </main>
 
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
+<script>
+  tailwind.config = {
+    theme: {
+      extend: {
+        colors: {
+          clifford: '#da373d',
+        }
+      }
+    }
+  }
+</script>
 <script src="script.js"></script>
 </html>
